Retirando os templates de exemplo

--- a/recipes/templates/recipes/contato.html
+++ b/recipes/templates/recipes/contato.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Temp</h1>
-    <p>This is a temporary template.</p>
+    <h1>Contato</h1>
+    <p>Esta é a página de contato.</p>
 </body>
 </html>
