--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -7,13 +7,14 @@
 
     <main class="main-content-container">
         <div class="main-content main-content-list container">
-            <div class="recipe recipe-list-item">
-                <div class="recipe-cover">
-                    <img src="https://placehold.co/1280x720/png/269fe6" alt="Temporário">
-                </div>
-            </div>
+            {% include 'recipes/partials/recipe.html' %}
+            {% include 'recipes/partials/recipe.html' %}
+            {% include 'recipes/partials/recipe.html' %}
+            {% include 'recipes/partials/recipe.html' %}
         </div>
     </main>
+
+    {% include 'recipes/partials/footer.html' %}
 </body>
 
 </html>
