Criação da view "recipe" para cada receita.

--- a/recipes/templates/recipes/partials/footer.html
+++ b/recipes/templates/recipes/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="main-footer">Add commentMore actions
+<footer class="main-footer">
   <div class="developer">
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noreferrer noopener">By Igor de Moura</a>
   </div>
